[package]
name = "pl-lens-derive"
version = "1.0.1"
edition = "2018"
authors = ["Chris Campbell <campbell@plausible.coop>"]
license = "MIT"
description = "Provides procedural `derive` macros that are used in conjuction with the `pl-lens` crate."
keywords = ["plausible", "lens", "functional"]
homepage = "https://github.com/plausiblelabs/lens-rs"
repository = "https://github.com/plausiblelabs/lens-rs"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
