[package]
name = "pl-lens-macros"
version = "1.0.1"
edition = "2018"
authors = ["Chris Campbell <campbell@plausible.coop>"]
license = "MIT"
description = "Temporary crate used to implement the `lens!` procedural macro."
keywords = ["plausible", "lens", "functional"]
homepage = "https://github.com/plausiblelabs/lens-rs"
repository = "https://github.com/plausiblelabs/lens-rs"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-hack = "0.5"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
